music-player created

--- a/index.html
+++ b/index.html
@@ -127,7 +127,15 @@
             </div>
         </div>
         <div class="music-player">
-            <div class="album"></div>
+            <div class="album">
+                <img src="card3img.jpeg" class="album-image">
+                <div class="album-info">
+                <a class="album-title">Top 50 New Songs</a>
+                <p class="album-para">Chanakya Niti</p>
+                </div>
+                <i class="fa-solid fa-circle-plus albm-icn"></i>
+                
+            </div>
             <div class="player">
                 <div class="player-controls">
                     <img src="player_icon1.png" class="player-control-icon">
@@ -142,7 +150,14 @@
                     <span class="total-time">3:33</span>
                 </div>
             </div>
-            <div class="controls"></div>
+            <div class="controls">
+                <i class="fa-solid fa-circle-pause cntrl-icon"></i>
+                <i class="fa-solid fa-book"></i>
+                <i class="fa-brands fa-connectdevelop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <input type="range" min="0" max="100">
+                <i class="fa-solid fa-file-image"></i>
+            </div>
         </div>
     </div>
 </body>
